# yamj

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
.github/workflows/: release.yml
_CPack_Packages/win64/NSIS/: NSIS.InstallOptions.ini  project.nsi
src/: main.cpp  yamj.rc
